--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
   <head>
+
+<style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
+
     <link rel="icon" href="../favicon.ico" />
 
     <meta charset="utf-8" />
