把静态文件移动到static文件夹,添加了cli.js

--- a/static/index.html
+++ b/static/index.html
@@ -39,8 +39,8 @@
         <link rel="stylesheet" type="text/css" href="css.css" />
 
         <link href="app.css" rel="stylesheet" />
-        <script type="text/javascript" src="vendor.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="vendor.js" async></script>
+        <script type="text/javascript" src="app.js" async></script>
     </head>
 
     <body ng-controller="MainCtrl" ng-cloak>
