--- a/static/index.html
+++ b/static/index.html
@@ -1001,7 +1001,10 @@
                         ng-click="toggleCollapsed(download)"
                     >
                         <div
-                            class="download-name download-item download-controls clearfix"
+                            class="
+                                download-name download-item download-controls
+                                clearfix
+                            "
                         >
                             <div
                                 class="btn-group"
@@ -1178,7 +1181,10 @@
                         >
                             <ul class="stats pull-left" ng-switch-when="active">
                                 <li
-                                    class="label label-active hidden-phone hidden-tablet"
+                                    class="
+                                        label label-active
+                                        hidden-phone hidden-tablet
+                                    "
                                 >
                                     <span
                                         title="{{ 'Download status' | translate }}"
@@ -1289,7 +1295,10 @@
                                 </li>
 
                                 <li
-                                    class="label label-active hidden-phone hidden-tablet"
+                                    class="
+                                        label label-active
+                                        hidden-phone hidden-tablet
+                                    "
                                 >
                                     <span title="{{ 'Progress' | translate }}">
                                         <svg class="icon icon-fw">
@@ -1307,7 +1316,10 @@
                                 ng-switch-when="verifing"
                             >
                                 <li
-                                    class="label label-warning hidden-phone hidden-tablet"
+                                    class="
+                                        label label-warning
+                                        hidden-phone hidden-tablet
+                                    "
                                 >
                                     <span
                                         title="{{ 'Download status' | translate }}"
@@ -1395,7 +1407,10 @@
                                 </li>
 
                                 <li
-                                    class="label label-active hidden-phone hidden-tablet"
+                                    class="
+                                        label label-active
+                                        hidden-phone hidden-tablet
+                                    "
                                 >
                                     <span title="{{ 'Progress' | translate }}">
                                         <svg class="icon icon-fw">
@@ -1413,7 +1428,10 @@
                                 ng-switch-when="verifyPending"
                             >
                                 <li
-                                    class="label label-warning hidden-phone hidden-tablet"
+                                    class="
+                                        label label-warning
+                                        hidden-phone hidden-tablet
+                                    "
                                 >
                                     <span
                                         title="{{ 'Download status' | translate }}"
@@ -1501,7 +1519,10 @@
                                 </li>
 
                                 <li
-                                    class="label label-active hidden-phone hidden-tablet"
+                                    class="
+                                        label label-active
+                                        hidden-phone hidden-tablet
+                                    "
                                 >
                                     <span title="{{ 'Progress' | translate }}">
                                         <svg class="icon icon-fw">
@@ -1975,7 +1996,11 @@
                                 </ul>
 
                                 <ul
-                                    class="download-files hidden-phone download-item"
+                                    class="
+                                        download-files
+                                        hidden-phone
+                                        download-item
+                                    "
                                 >
                                     <li
                                         class="label label-default"
