--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
     <head>
@@ -1001,10 +1001,7 @@
                         ng-click="toggleCollapsed(download)"
                     >
                         <div
-                            class="
-                                download-name download-item download-controls
-                                clearfix
-                            "
+                            class="download-name download-item download-controls clearfix"
                         >
                             <div
                                 class="btn-group"
@@ -1181,10 +1178,7 @@
                         >
                             <ul class="stats pull-left" ng-switch-when="active">
                                 <li
-                                    class="
-                                        label label-active
-                                        hidden-phone hidden-tablet
-                                    "
+                                    class="label label-active hidden-phone hidden-tablet"
                                 >
                                     <span
                                         title="{{ 'Download status' | translate }}"
@@ -1295,10 +1289,7 @@
                                 </li>
 
                                 <li
-                                    class="
-                                        label label-active
-                                        hidden-phone hidden-tablet
-                                    "
+                                    class="label label-active hidden-phone hidden-tablet"
                                 >
                                     <span title="{{ 'Progress' | translate }}">
                                         <svg class="icon icon-fw">
@@ -1316,10 +1307,7 @@
                                 ng-switch-when="verifing"
                             >
                                 <li
-                                    class="
-                                        label label-warning
-                                        hidden-phone hidden-tablet
-                                    "
+                                    class="label label-warning hidden-phone hidden-tablet"
                                 >
                                     <span
                                         title="{{ 'Download status' | translate }}"
@@ -1407,10 +1395,7 @@
                                 </li>
 
                                 <li
-                                    class="
-                                        label label-active
-                                        hidden-phone hidden-tablet
-                                    "
+                                    class="label label-active hidden-phone hidden-tablet"
                                 >
                                     <span title="{{ 'Progress' | translate }}">
                                         <svg class="icon icon-fw">
@@ -1428,10 +1413,7 @@
                                 ng-switch-when="verifyPending"
                             >
                                 <li
-                                    class="
-                                        label label-warning
-                                        hidden-phone hidden-tablet
-                                    "
+                                    class="label label-warning hidden-phone hidden-tablet"
                                 >
                                     <span
                                         title="{{ 'Download status' | translate }}"
@@ -1519,10 +1501,7 @@
                                 </li>
 
                                 <li
-                                    class="
-                                        label label-active
-                                        hidden-phone hidden-tablet
-                                    "
+                                    class="label label-active hidden-phone hidden-tablet"
                                 >
                                     <span title="{{ 'Progress' | translate }}">
                                         <svg class="icon icon-fw">
@@ -1996,11 +1975,7 @@
                                 </ul>
 
                                 <ul
-                                    class="
-                                        download-files
-                                        hidden-phone
-                                        download-item
-                                    "
+                                    class="download-files hidden-phone download-item"
                                 >
                                     <li
                                         class="label label-default"
